--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,6 +19,11 @@
       align-items: center;
       
     }
+    main {
+    height: auto;
+    margin-bottom: 10%;
+  }
+
 
     .logo {
       font-size: 1.5rem;
@@ -128,9 +133,7 @@
       to { opacity: 1; }
     }
 
-    main{
-      height: 500px;
-    }
+  
 
 
     body {
